--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -36,9 +36,11 @@ jobs:
         java-version: '20'
         distribution: 'temurin'
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
+        cache-read-only: false
+    - name: Execute Gradle build
+      run: ./gradlew build
 
   deploy:
 
