--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -38,9 +38,9 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
+        arguments: build
         cache-read-only: false
-    - name: Execute Gradle build
-      run: ./gradlew build
+
 
   deploy:
 
