--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -30,16 +30,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 20
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '20'
+        java-version: '17'
         distribution: 'temurin'
+        cache: 'gradle'
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: build
-        cache-read-only: false
+      run: ./gradlew build --no-daemon
 
 
   deploy:
