--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -23,10 +23,7 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
     - uses: actions/checkout@v3
@@ -38,7 +35,11 @@ jobs:
         cache: 'gradle'
     - name: Build with Gradle
       run: ./gradlew build --no-daemon
-
+    - name: Publish to GitHub Packages
+      run: gradle publish
+      env:
+        USERNAME: ${{ github.actor }}
+        PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
   deploy:
 
