add missing dep

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -42,8 +42,9 @@ jobs:
         PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
   deploy:
-
+    needs: [ build ]
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
