--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         name: build-result
         path: build/libs
-  pubish:
+  publish:
     needs: [ build ]
     runs-on: ubuntu-latest
 
