--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:file:data/db/sygotchi;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
+    url: jdbc:h2:file:./data/db/sygotchi;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
     driverClassName: org.h2.Driver
     username: admin
     password:
